<resources>
    <string name="app_name">Wordle</string>
    <string name="guess_1">Guess #1</string>
    <string name="four_dash">_ _ _ _</string>
    <string name="guess_2">Guess #2</string>
    <string name="guess_1_check">Guess #1 Check</string>
    <string name="restart">RESTART</string>
    <string name="guess">GUESS!</string>
    <string name="enter_4_letter_guess_here">Enter 4 letter guess here</string>
    <string name="guess_3_check">Guess #3 Check</string>
    <string name="guess_3">Guess #3</string>
    <string name="guess_2_check">Guess #2 Check</string>
</resources>